fix dark mode

--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -36,21 +36,29 @@
 		padding: 0;
 		display: flex;
 		align-items: center;
+		gap: 10px;
 
 		.item {
 			display: flex;
 			align-items: center;
-			margin-right: 20px;
 			position: relative;
 
 			.icon {
+				cursor: pointer;
 				font-size: 20px;
+				padding: 5px;
+
+				&:hover {
+					background-color: lightgray;
+					border-radius: 50%;
+				}
 			}
 
 			.avatar {
 				width: 30px;
 				height: 30px;
 				border-radius: 50%;
+				cursor: pointer;
 			}
 
 			.counter {
